cluster/manifests/token-request-server/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: token-request-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: token-request-server
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
