cluster/manifests/token-request-server/overlays/dev/request_authentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: token-request-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: token-request-server
      app.kubernetes.io/component: ""
  jwtRules:
    - issuer: https://token.actions.githubusercontent.com
      jwksUri: https://token.actions.githubusercontent.com/.well-known/jwks
      outputClaimToHeaders:
        - claim: sub
          header: X-Auth-Request-User
