cluster/manifests/token-request-server/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: token-request-server
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - token-request-server.minikube.127.0.0.1.nip.io
        - token-request-server.kaidotio.dev
        - token-request-server-public.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
