cluster/manifests/token-request-server/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: token-request-server
spec:
  gateways:
    - token-request-server
  hosts:
    - token-request-server.minikube.127.0.0.1.nip.io
    - token-request-server.kaidotio.dev
    - token-request-server-public.kaidotio.dev
  http:
    - route:
        - destination:
            host: token-request-server
            port:
              number: 8080
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
